--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"type": "module",
 	"dependencies": {
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
-		"firebase": "^9.14.0"
+		"firebase": "^9.14.0",
+		"motion": "^10.14.3"
 	}
 }
