--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"dependencies": {
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"firebase": "^9.14.0",
+		"lottie-svelte": "^1.3.3",
 		"motion": "^10.14.3"
 	}
 }
