--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"convert": "node local/transpile.js",
-		"convert2": "tar xzf csv.tar.gz && python data/01-csvtojson.py && node data/02-transpile.js",
-		"genschoolindex": "node data/generateSchoolIndex.js"
+		"d-extract": "tar xzf csv.tar.gz",
+		"d-tojson": "python data/01-csvtojson.py",
+		"d-transpile": "node data/02-transpile.js",
+		"d-genschoolindex": "node data/generateSchoolIndex.js",
+		"convert": "yarn d-extract && yarn d-tojson && yarn d-transpile"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.48",
