--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"d-extract": "tar xzf csv.tar.gz",
+		"d-extract": "tar xzvf data/csv.tar.gz --directory data/",
 		"d-tojson": "python data/01-csvtojson.py",
 		"d-transpile": "node data/02-transpile.js",
 		"d-genschoolindex": "node data/generateSchoolIndex.js",
