--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
 		"dev": "nodemon --exec node --loader ts-node/esm -r dotenv/config src/index.ts"
 	},
 	"dependencies": {
-		"fastify": "^4.11.0"
+		"fastify": "^4.11.0",
+		"nocodb-sdk": "^0.101.2"
 	},
 	"devDependencies": {
 		"dotenv": "^16.0.3",
