--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,8 @@
 	"dependencies": {
 		"fastify": "^4.11.0",
 		"nocodb-sdk": "^0.101.2",
-		"zod": "^3.20.2"
+		"zod": "^3.20.2",
+		"zod-validation-error": "^0.3.0"
 	},
 	"devDependencies": {
 		"dotenv": "^16.0.3",
