--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,9 @@
 	},
 	"dependencies": {
 		"@fastify/cors": "^8.2.0",
+		"@fastify/multipart": "^7.4.0",
 		"fastify": "^4.11.0",
+		"firebase-admin": "^11.5.0",
 		"nocodb-sdk": "^0.101.2",
 		"zod": "^3.20.2",
 		"zod-validation-error": "^0.3.0"
