--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
 		"fastify": "^4.11.0",
 		"firebase-admin": "^11.5.0",
 		"nocodb-sdk": "^0.101.2",
+		"node-fetch": "^3.3.0",
 		"zod": "^3.20.2",
 		"zod-validation-error": "^0.3.0"
 	},
