chore(api): Add docker image and compose file

--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,9 @@
 	"license": "MIT",
 	"type": "module",
 	"scripts": {
-		"dev": "nodemon --exec node --loader ts-node/esm -r dotenv/config src/index.ts"
+		"dev": "nodemon --exec node --loader ts-node/esm -r dotenv/config src/index.ts",
+		"build": "tsc",
+		"start": "node dist/index.js"
 	},
 	"dependencies": {
 		"@fastify/cors": "^8.2.0",
