--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@beyonk/svelte-google-analytics": "^2.6.4",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"firebase": "^9.14.0",
 		"lottie-svelte": "^1.3.3",
