--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"firebase": "^9.14.0",
 		"lottie-svelte": "^1.3.3",
-		"motion": "^10.14.3"
+		"motion": "^10.14.3",
+		"svelte-action-balancer": "^1.0.4"
 	}
 }
