--- a/package.json
+++ b/package.json
@@ -39,9 +39,13 @@
 	"dependencies": {
 		"@beyonk/svelte-google-analytics": "^2.6.4",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
+		"@types/sanitize-html": "^2.9.0",
 		"firebase": "^9.14.0",
+		"linkify-html": "^4.1.1",
+		"linkifyjs": "^4.1.1",
 		"lottie-svelte": "^1.3.3",
 		"motion": "^10.14.3",
+		"sanitize-html": "^2.10.0",
 		"svelte-action-balancer": "^1.0.4"
 	}
 }
